--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,6 @@ stages:
     - task: Docker@2
       inputs:
          containerRegistry: 'bitbarg regis'
-         repository: 'bitbarg/harchi'
+         repository: 'hamedbaftam/harchi'
          command: 'buildAndPush'
          Dockerfile: '**/Dockerfile'
